--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Card</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="./img/SEDAN.svg" alt="car logo" class="img">
+        <h1 class="header">SEDAN</h1>
+        <p class="text">Choose a sedan for its 
+            affordability and excellent 
+            fuel economy. Ideal for 
+            cruising in the city or on your 
+            next road trip.
+        </p>
+        <button class="btn">Learn More</button>
+    </div>
 </body>
 </html>
