--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <img src="./img/SEDAN.svg" alt="car logo" class="img">
-        <h1 class="header">SEDAN</h1>
-        <p class="text">Choose a sedan for its 
-            affordability and excellent 
-            fuel economy. Ideal for 
-            cruising in the city or on your 
-            next road trip.
-        </p>
-        <button class="btn">Learn More</button>
+        <div class="box bg-orange">
+            <div class="content">
+                <img src="./img/car-orange.svg" alt="car logo" class="img">
+                <h1 class="header">SEDAN</h1>
+                <p class="text">
+                    Choose a sedan for its 
+                    affordability and excellent 
+                    fuel economy. Ideal for 
+                    cruising in the city or on your 
+                    next road trip.
+                </p>
+                <button class="btn btn-orange">Learn More</button>
+            </div>
+        </div>
+        <div class="box bg-blue">
+            <div class="content">
+                <img src="./img/car-blue.svg" alt="car logo" class="img">
+                <h1 class="header">SEDAN</h1>
+                <p class="text">
+                    Take an SUV for its spacious 
+                    interior, power, and 
+                    versatility. Perfect for your 
+                    next family vacation and 
+                    off-road adventures.
+                </p>
+                <button class="btn btn-blue">Learn More</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
