--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="box bg-blue">
                 <div class="content">
                     <img src="./img/car-blue.svg" alt="car logo" class="img">
-                    <h1 class="header">SEDAN</h1>
+                    <h1 class="header">SUVS</h1>
                     <p class="text">
                         Take an SUV for its spacious 
                         interior, power, and 
